--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>DEIGEX - Helping the Americas | Our Causes</title>
+    <title>THX - Charity HTML Template | Contact</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
@@ -31,7 +31,9 @@
 <div class="page">
 
     <!--=============================== Header ===========================-->
-    <div id="header"></div>
+    <div id="header">
+
+    </div>
 
     <!--=============================== Menu-Bar ========================-->
     <div id="menuBar-charity">
@@ -98,145 +100,82 @@
     <!--=============================== Banner ==========================-->
     <div class="banner">
         <div class="shadow-main">
-            <h1> Our Causes </h1>
+            <h1> Contact Us </h1>
             <ul class="breadcrumb breadcrumb-news">
                 <li><a href="index.html">HOME</a></li>
-                <li><a href="our-causes.html">OUR CAUSES</a></li>
+                <li><a href="contact.html">CONTACT</a></li>
             </ul>
         </div>
     </div>
 
-    <!--=============================== Our causes ================================-->
-    <div class="main-causes">
+    <!--=============================== Contact ================================-->
+    <div class="main-contact">
         <div class="container">
-
-            <div class="row mb-causes mb-causes-top" id="food-cloths-program">
-                <div class="col-md-6 col-sm-12 col-xs-12 center-causes">
-                    <div class="person-img">
-                        <a href="#food-cloths-program" class="img-link">
-                            <span><i class="icon-eye" aria-hidden="true"></i></span>
-                            <img src="assets/images/our-causes-570x360.png" alt="Don Beto">
-                        </a>
+            <div class="row">
+                <div class="col-md-4 col-sm-6 col-xs-12 mb-contact">
+                    <ul class="contact">
+                        <li>
+                            <strong>Location</strong>
+                            <span>177 Park Avenue, Suite 200. San Jose, CA 95113</span>
+                        </li>
+                        <li>
+                            <strong>Work Hours</strong>
+                            <span>Due to COVID-19 shelter in place only online meetings</span>
+                            <br>
+                            <span>Mon - Sat 9:00am - 5:00pm</span>
+                        </li>
+                        <li>
+                            <strong>Phone</strong>
+                            <span>(408) 833-2549</span>
+                        </li>
+                        <li>
+                            <strong>Send us an email</strong>
+                            <span>info@deigex.com</span>
+                        </li>
+                    </ul>
+                    <div class="contact-social-link">
+                        <ul>
+                            <!-- <li><a href="https://www.twitter.com/"><i class="icon-tumblr "></i></a></li> -->
+                            <li><a href="https://www.facebook.com/"><i class="icon-facebook "></i></a></li>
+                            <!-- <li><a href="https://www.pinterest.com/"><i class="icon-pinterest "></i></a></li>
+                            <li><a href="https://vimeo.com/"><i class="icon-vimeo "></i></a></li> -->
+                        </ul>
                     </div>
                 </div>
-                <div class="col-md-6 col-sm-12 col-xs-12 ">
-                    <div class="person-card ">
-                        <div class="person-content">
-                            <h3><a href="#food-cloths-program"
-                              class="title-white">Food & Cloths Bank Program</a></h3>
-                            <p>The Food and Cloths Bank Program's main beneficiaries are the most vulnerable
-                              people from all the American Continent living in poverty, and in desperate
-                              need of these basic services. Unfortunately, poverty and extreme poverty
-                              in Central America is pervasive, there is a high percentage of the
-                              population that  lives below the poverty line. Most of these people live
-                              from agriculture, have little or no education at all, making it for them
-                              to struggle accessing these basic needs of any human being. </p>
-                        </div>
-                    </div>
+                <div class="col-md-8 col-sm-6 col-xs-12">
+                    <div class="leave-reply">
 
-                    <div class="buttons">
-                        <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=KYC8EQMRQY9VJ&source=url" class=" red-btn red-btn-4">Donate</a>
+                        <!-- MailChimp Form -->
+                        <form action="https://deigex.us3.list-manage.com/subscribe/post?u=7559ac8e9c0e478d58a1ef6c8&amp;id=3576c4fdf7" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+                          <div id="mc_embed_signup_scroll">
+                            <div class="indicates-required"><span class="asterisk">*</span> indicates required</div>
+                            <div class="form-group">
+                      	         <input type="text" value="" name="FNAME" class="form-control" placeholder="Name*" id="mce-FNAME">
+                            </div>
+                            <div class="mc-field-group form-group">
+                      	         <input type="email" value="" name="EMAIL" class="required email form-control" placeholder="E-mail*" id="mce-EMAIL">
+                            </div>
+                            <div class="mc-field-group form-group">
+                  	            <input type="text" value="" name="MMERGE5" class="form-control" rows="6" placeholder="Message..." id="mce-MMERGE5">
+                            </div>
+                      	    <div id="mce-responses" class="clear">
+                      		      <div class="response" id="mce-error-response" style="display:none"></div>
+                      		      <div class="response" id="mce-success-response" style="display:none"></div>
+                      	    </div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+                            <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_7559ac8e9c0e478d58a1ef6c8_3576c4fdf7" tabindex="-1" value=""></div>
+                            <div class="clear"><input type="submit" value="Send Message" name="subscribe" id="mc-embedded-subscribe" class="button red-btn red-btn-form"></div>
+                          </div>
+                      </form>
+                      <!-- End MailChimp Form -->
                     </div>
                 </div>
-            </div> <!--  /.row mb-causes mb-causes-top -->
-
-            <div class="row mb-causes" id="covid-19-protection">
-                <div class="col-md-6 col-sm-12 col-xs-12 center-causes">
-                    <div class="person-img">
-                        <a href="#covid-19-protection" class="img-link">
-                            <span><i class="icon-eye" aria-hidden="true"></i></span>
-                            <img src="assets/images/covid-19-570x360.png" alt="causes2">
-                        </a>
-                    </div>
-                </div>
-                <div class="col-md-6 col-sm-12 col-xs-12 ">
-                    <div class="person-card ">
-                        <div class="person-content">
-                            <h3><a href="#covid-19-protection"
-                              class="title-white">Provide COVID-19 Protection</a></h3>
-                            <p>Those infected by the Coronavirus need help from qualified medical
-                              personnel in order to survive. However, qualified medical personnel
-                              need high-class protective gear in order to help them. There is a
-                              severe lack of protective gear, especially masks, and medical personnel
-                              all around the world are being forced to improvise, putting their own
-                              safety on the line in the process, so that they can continue to help
-                              the infected.  </p>
-                              <p>DEIGEX is raising funds to buy masks and other
-                              desperately needed protective gear, which will then be given to doctors
-                              and nurses in Coronavirus fighting hospitals from Mexico, Guatemala,
-                              Honduras, and El Salvador. The goal is $100,000, and if we fulfill this,
-                              thousands of lives could be saved. Can you help us to provide support to
-                              those facing the worst that Coronavirus has to offer every single day?</p>
-                        </div>
-                    </div>
-
-                    <div class="buttons">
-                        <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=KYC8EQMRQY9VJ&source=url" class=" red-btn red-btn-4">Donate</a>
-                    </div>
-                </div>
-            </div> <!--  /.row mb-causes -->
-
-            <div class="row mb-causes" id="fair-trade">
-                <div class="col-md-6 col-sm-12 col-xs-12 center-causes">
-                    <div class="person-img">
-                        <a href="#fair-trade" class="img-link">
-                            <span><i class="icon-eye" aria-hidden="true"></i></span>
-                            <img src="assets/images/fair-trade-570x360.png" alt="causes3">
-                        </a>
-                    </div>
-                </div>
-                <div class="col-md-6 col-sm-12 col-xs-12 ">
-                    <div class="person-card ">
-                        <div class="person-content">
-                            <h3><a href="#fair-trade" class="title-white">Fair Trade Project</a></h3>
-                            <p>They have art, passion, and hard work on their hands. We are here to
-                              open doors to help them thrive in their small entrepreneurships to help
-                              them become sosteinable in time. </p>
-                            <p>This project will enhance micro entrepreneurs to colocate their products
-                              in the US & Canada market. The project will give assistance with business
-                              education, web design, online marketing, product transportation and warehousing.
-                              When you donate to this project you are helping create wealth and economy
-                              in their home countries.</p>
-                        </div>
-                    </div>
-
-                    <div class="buttons">
-                        <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=KYC8EQMRQY9VJ&source=url" class=" red-btn red-btn-4">Donate</a>
-                    </div>
-                </div>
-            </div> <!--  /.row mb-causes -->
-
-            <div class="row mb-causes" id="giving-tuesday">
-                <div class="col-md-6 col-sm-12 col-xs-12 center-causes">
-                    <div class="person-img">
-                        <a href="#giving-tuesday" class="img-link">
-                            <span><i class="icon-eye" aria-hidden="true"></i></span>
-                            <img src="assets/images/giving-tuesday-570x360.png" alt="causes4">
-                        </a>
-                    </div>
-                </div>
-                <div class="col-md-6 col-sm-12 col-xs-12 ">
-                    <div class="person-card ">
-                        <div class="person-content">
-                            <h3><a href="#giving-tuesday" class="title-white">Giving Tuesday Now</a></h3>
-                            <p>Giving Tuesday Now is a global generosity movement to unleash
-                              the power of people and organizations to transform their
-                              communities and the world by doing good. This movement is inspirng
-                              millions of people to give, collaborate, and celebrate generosity. </p>
-                        </div>
-                    </div>
-
-                    <div class="buttons">
-                        <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=KYC8EQMRQY9VJ&source=url" class=" red-btn red-btn-4">Donate</a>
-                    </div>
-                </div>
-            </div> <!--  /.row mb-causes -->
-
-
-            <!--======================= Pagination ========================-->
-
+            </div>
         </div> <!--  /.container -->
-    </div> <!--  /.main-causes -->
+    </div> <!--  /.main-contact -->
+
+    <div class="overlay" onClick="style.pointerEvents='none'"></div>
+
+    <div id="map"></div>
 
     <!--=============================== Footer ===========================-->
     <div id="footer">
@@ -371,9 +310,57 @@
 <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 <script src="assets/js/jquery.spincrement.js"></script>
 <script src="assets/js/owl.carousel.min.js"></script>
-<script src="assets/js/scrollBar.js"></script>
 <script src="assets/js/bootstrap.min.js"></script>
+<script>
+    "use strict";
+        var marker;
+
+        function initMap() {
+
+            var myLatlng = {lat: 37.33190, lng: -121.89344};
+
+            var map = new google.maps.Map(document.getElementById('map'), {
+                zoom: 13,
+                center: myLatlng
+            });
+
+            var iconBase = 'assets/images/location.png';
+
+            marker = new google.maps.Marker({
+                map: map,
+                draggable: true,
+                animation: google.maps.Animation.DROP,
+                position: myLatlng,
+                icon: iconBase
+            });
+            marker.addListener('click', toggleBounce);
+
+            map.addListener('center_changed', function () {
+                window.setTimeout(function () {
+                    map.panTo(marker.getPosition());
+                }, 3000);
+            });
+
+            marker.addListener('click', function () {
+                map.setCenter(marker.getPosition());
+            });
+
+        }
+
+        function toggleBounce() {
+            if (marker.getAnimation() !== null) {
+                marker.setAnimation(null);
+            } else {
+                marker.setAnimation(google.maps.Animation.BOUNCE);
+            }
+        }
+
+</script>
+<script async defer
+        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD4ppPTHXCpBSoOkLESSfwMlD1zojoMxBc&callback=initMap">
+</script>
 <script src="assets/js/myScript.js"></script>
 
 </body>
+
 </html>
