--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <link rel="stylesheet" href="assets/css/css-fontello/fontello-embedded.css" type="text/css"/>
     <link rel="stylesheet" href="assets/css/css-fontello/fontello-ie7.css" type="text/css"/>
     <link rel="stylesheet" href="assets/css/css-fontello/fontello-ie7-codes.css" type="text/css"/>
+
     <!--[if lt IE 9]>
     <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
     <script src="assets/js/respond.min.js"></script>
@@ -101,15 +102,7 @@
                                         <li><a href="our-causes.html#giving-tuesday">GIVING TUESDAY NOW</a></li>
                                     </ul>
                                 </li>
-                                <li class="dropdown">
-                                    <a href="" class="dropdown-toggle" data-toggle="dropdown"
-                                       role="button" aria-expanded="false" title="Shop">VOLUNTEER</a>
-                                    <ul class="dropdown-menu" role="menu">
-                                        <li ><a href="http://connectbrevard.org/PubApps/nteeSearch.php?gQry=allMajor&codeType=NTEE">ACTIVITY CODES</a></li>
-                                        <!-- <li ><a href="shop-product.html">SHOP PRODUCT</a></li> -->
-                                    </ul>
-                                </li>
-
+                                <li class="last"><a href="volunteer.html" class="contact" title="Contact">VOLUNTEER</a></li>
                                 <li class="last"><a href="contact.html" class="contact" title="Contact">CONTACT US</a></li>
                                 <li class="last"><a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=KYC8EQMRQY9VJ&source=url"
                                   class="contact" title="Contact">DONATE</a></li>
@@ -580,9 +573,7 @@
 
     <!--=============================== Footer ===========================-->
 
-
     <div id="footer">
-
       <footer class="black">
           <div class="footer-container">
               <div class="container">
@@ -597,25 +588,25 @@
                                       to disadvantaged communities in the entire American continent. </p>
                                   <ul>
                                       <li><i class="icon-location-1"></i>
-                                          <span>177 Park Avenue, Suite 200. San Jose, CA 95113. </span></li>
+                                          <span>177 Park Avenue, Suite 200. San Jose, CA 95113 </span></li>
                                       <li><i class="icon-phone"></i>
                                           <span>Phone: 408-8332549</span></li>
                                       <li><i class="icon-mail"></i>
                                           <span>Email: <a href="mailto:#">info@deigex.com</a></span></li>
                                   </ul>
+                                  <div class="social-link footer-social-link">
+                                      <ul>
+                                          <!-- <li><a href="https://www.twitter/" class="circle c-1">
+                                            <i class="icon-tumblr "></i></a></li> -->
+                                          <li><a href="https://www.facebook.com/deigex" class="circle c-2">
+                                            <i class="icon-facebook "></i></a></li>
+                                          <!-- <li><a href="https://www.youtube.com/" class="circle c-3">
+                                            <i class="icon-pinterest"></i></a></li>
+                                          <li><a href="https://vimeo.com/" class="circle c-4">
+                                            <i class="icon-vimeo "></i></a></li> -->
+                                      </ul>
+                                  </div> <!-- footer-social-link -->
                               </div>
-                              <div class="social-link footer-social-link">
-                                  <ul>
-                                      <li><a href="https://www.twitter/" class="circle c-1">
-                                        <i class="icon-tumblr "></i></a></li>
-                                      <li><a href="https://www.facebook.com/" class="circle c-2">
-                                        <i class="icon-facebook "></i></a></li>
-                                      <!-- <li><a href="https://www.youtube.com/" class="circle c-3">
-                                        <i class="icon-pinterest"></i></a></li>
-                                      <li><a href="https://vimeo.com/" class="circle c-4">
-                                        <i class="icon-vimeo "></i></a></li> -->
-                                  </ul>
-                              </div> <!-- footer-social-link -->
                           </div>
 
                           <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12 mb">
@@ -652,24 +643,31 @@
                               </div>
                           </div>
 
-                          <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12 mb">
+                          <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12 mb footer-about-info">
                               <h4> Contact Us </h4>
-                              <form action="...">
+
+                              <!-- MailChimp Form -->
+                              <form action="https://deigex.us3.list-manage.com/subscribe/post?u=7559ac8e9c0e478d58a1ef6c8&amp;id=3576c4fdf7" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+                                <div id="mc_embed_signup_scroll">
                                   <div class="form-group">
-                                      <input id="first_name" name="first_name" type="text" placeholder="Name"
-                                             class="form-control" required="">
+                            	         <input type="text" value="" name="FNAME" class="form-control" placeholder="Name*" id="mce-FNAME">
                                   </div>
-                                  <div class="form-group">
-                                      <input id="email" name="email" type="email" placeholder="E-mail"
-                                             class="form-control">
+                                  <div class="mc-field-group form-group">
+                            	         <input type="email" value="" name="EMAIL" class="required email form-control" placeholder="E-mail*" id="mce-EMAIL">
                                   </div>
-                                  <div class="form-group">
-                                      <textarea class="form-control" rows="4" placeholder="Message..."></textarea>
+                                  <div class="mc-field-group form-group">
+                        	            <input type="text" value="" name="MMERGE5" class="form-control" rows="4" placeholder="Message..." id="mce-MMERGE5">
                                   </div>
-                                  <div class="form-group buttons ">
-                                      <input type="submit" class="red-btn red-btn-form" value="Send Message">
-                                  </div>
-                              </form>
+                            	    <div id="mce-responses" class="clear">
+                            		      <div class="response" id="mce-error-response" style="display:none"></div>
+                            		      <div class="response" id="mce-success-response" style="display:none"></div>
+                            	    </div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+                                  <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_7559ac8e9c0e478d58a1ef6c8_3576c4fdf7" tabindex="-1" value=""></div>
+                                  <div class="clear"><input type="submit" value="Send Message" name="subscribe" id="mc-embedded-subscribe" class="button red-btn red-btn-form"></div>
+                                </div>
+                            </form>
+                            <!-- End MailChimp Form -->
+
                           </div>
 
                       </div>
@@ -690,7 +688,8 @@
                   <div class="row">
                       <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                           <p class="copy-title">Copyright &copy; 2020.
-                              <a href="https://deigex.com/" target="_blank">DEIGEX, Inc.</a>
+                              <a href="https://deigex.com/" target="_blank">DEIGEX, Inc.     </a>
+                              <a href="privacy.html" class=""> |   Privacy Policy</a>
                           </p>
                       </div>
                   </div>
