--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
                         make the earth a better place for all.
                     </p>
                     <div class="buttons">
-                        <a href="login.html" class="red-btn red-btn-5">Join Us Now</a>
+                        <a href="volunteer.html" class="red-btn red-btn-5">Join Us Now</a>
                     </div>
                 </div>
             </div>
@@ -313,7 +313,7 @@
             <div class="row">
                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 text-center">
                     <div class="buttons">
-                        <a href="about-us.html" class="red-btn red-btn-6">Volunteer Today</a>
+                        <a href="volunteer.html" class="red-btn red-btn-6">Volunteer Today</a>
                     </div>
                 </div>
             </div>
@@ -330,7 +330,8 @@
                     <div class="image"></div>
                 </div>
                 <div class="col-md-6 col-sm-9 col-xs-12 save-life">
-                    <h2> Donate to Feed a Family</h2>
+                    <h2><a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=KYC8EQMRQY9VJ&source=url">
+                      Donate to Feed a Family</a></h2>
                 </div>
             </div>
         </div>
@@ -386,7 +387,7 @@
                             <div class="col-md-2 col-sm-2 col-xs-3 height100">
                                 <div class="events-title text-center ">
                                     <p>
-                                        <a href="#">25
+                                        <a href="volunteer.html">25
                                             <span>May</span>
                                         </a>
                                     </p>
@@ -394,16 +395,16 @@
                             </div>
                             <div class="col-md-10 col-sm-10 col-xs-9 pl">
                                 <h6>
-                                    <a href="#" class="white">Deigex Volunteer
+                                    <a href="volunteer.html" class="white">Deigex Volunteer
                                       Promotion Day</a>
                                 </h6>
                                 <ul class="gb-list">
                                     <li>
-                                        <a href="#"><i class="icon-clock" aria-hidden="true"></i>
+                                        <a href="volunteer.html"><i class="icon-clock" aria-hidden="true"></i>
                                             May 25, 2020</a>
                                     </li>
                                     <li><i class="icon-location-1"></i>
-                                        <a href="#"> California, USA </a>
+                                        <a href="volunteer.html"> California, USA </a>
                                     </li>
                                 </ul>
                             </div>
@@ -557,7 +558,7 @@
                         <p><img src="assets/images/heart.png" alt="heart"></p>
                     </div>
                     <div class="images-text">
-                        <h2><a href="login.html">Join Us</a></h2>
+                        <h2><a href="volunteer.html">Join Us</a></h2>
                     </div>
                 </div>
             </div>
