--- a/about-us.html
+++ b/about-us.html
@@ -197,8 +197,7 @@
                             </div>
                             <div class="text-cont-right">
                                 <div class="images-text">
-                                    <h3><a href="features.html">Eric Palma</a></h3>
-
+                                    <h3>Eric Palma</h3>
                                     <p>Chief Executive Officer</p>
                                     <p>epalma@deigex.com</p>
                                 </div>
@@ -217,8 +216,7 @@
                             </div>
                             <div class="text-cont-right">
                                 <div class="images-text">
-                                    <h3><a href="features.html">Vaneska Palma</a></h3>
-
+                                    <h3>Vaneska Palma</h3>
                                     <p>Chief Operating Officer</p>
                                     <p>vpalma@deigex.com</p>
                                 </div>
@@ -237,8 +235,7 @@
                         <div class="container-inner">
                             <div class="text-cont-left">
                                 <div class="images-text">
-                                    <h3><a href="features.html">Silvia Corcoran</a></h3>
-
+                                    <h3>Silvia Corcoran</h3>
                                     <p>Board of Trustees</p>
                                     <p>scorcoran@deigex.com</p>
                                 </div>
@@ -257,8 +254,7 @@
                         <div class="container-inner">
                             <div class="text-cont-left">
                                 <div class="images-text">
-                                    <h3><a href="features.html">Javier Palma</a></h3>
-
+                                    <h3>Javier Palma</h3>
                                     <p>Business Development Manager</p>
                                     <p>jpalma@deigex.com</p>
                                 </div>
