--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                     <div class="navbar-header">
                         <div class="logo">
                             <a href="index.html" class="navbar-brand">
-                                <img src="assets/images/logo.png" alt="Homepage logo">
+                                <img src="https://www.deigex.com/assets/images/logo.png" alt="Homepage logo">
                                 <span>DEIGEX</span>
                             </a>
                         </div>
@@ -153,7 +153,7 @@
             <div class="row">
                 <div class="col-md-6 col-sm-6 col-xs-12">
                     <div>
-                        <p><img src="assets/images/Don-Beto2-570x540.png" alt="Don-Beto"></p>
+                        <p><img src="https://www.deigex.com/assets/images/Don-Beto2-570x540.png" alt="Don-Beto"></p>
                     </div>
                 </div>
                 <div class="col-md-6 col-sm-6 col-xs-12">
@@ -204,7 +204,7 @@
                         <div class="person-img">
                             <a href="our-causes.html#covid-19-protection" class="img-link">
                                 <span><i class="icon-eye" aria-hidden="true"></i></span>
-                                <img src="assets/images/protective-370x300.png" alt="" class="img">
+                                <img src="https://www.deigex.com/assets/images/protective-370x300.png" alt="" class="img">
                             </a>
                         </div>
                         <div class="person-content">
@@ -225,7 +225,7 @@
                         <div class="person-img">
                             <a href="our-causes.html#food-cloths-program" class="img-link">
                                 <span><i class="icon-eye" aria-hidden="true"></i></span>
-                                <img src="assets/images/child-370x300.png" alt="" class="img">
+                                <img src="https://www.deigex.com/assets/images/child-370x300.png" alt="" class="img">
                             </a>
                         </div>
                         <div class="person-content">
@@ -247,7 +247,7 @@
                         <div class="person-img">
                             <a href="our-causes.html#fair-trade" class="img-link">
                                 <span><i class="icon-eye" aria-hidden="true"></i></span>
-                                <img src="assets/images/fair-trade-370x300.png" alt="" class="img">
+                                <img src="https://www.deigex.com/assets/images/fair-trade-370x300.png" alt="" class="img">
                             </a>
                         </div>
                         <div class="person-content">
@@ -537,7 +537,7 @@
             <div class="row">
                 <div class="col-md-4 col-sm-4 col-xs-12 text-center mb">
                     <div class="images">
-                        <p><img src="assets/images/drop.png" alt="drop"></p>
+                        <p><img src="https://www.deigex.com/assets/images/drop.png" alt="drop"></p>
                     </div>
                     <div class="images-text">
                         <h2>
@@ -547,7 +547,7 @@
                 </div>
                 <div class="col-md-4 col-sm-4 col-xs-12 text-center mb">
                     <div class="images">
-                        <p><img src="assets/images/circle.png" alt="circle"></p>
+                        <p><img src="https://www.deigex.com/assets/images/circle.png" alt="circle"></p>
                     </div>
                     <div class="images-text">
                         <h2><a href="our-causes.html">Get Involved</a></h2>
@@ -555,7 +555,7 @@
                 </div>
                 <div class="col-md-4 col-sm-4 col-xs-12 text-center">
                     <div class="images">
-                        <p><img src="assets/images/heart.png" alt="heart"></p>
+                        <p><img src="https://www.deigex.com/assets/images/heart.png" alt="heart"></p>
                     </div>
                     <div class="images-text">
                         <h2><a href="volunteer.html">Join Us</a></h2>
@@ -614,7 +614,7 @@
                               <h4> Our Projects </h4>
                               <div class="news-1">
                                   <a href="our-causes.html#giving-tuesday">
-                                      <img src="assets/images/heart-2.png" alt="...">
+                                      <img src="https://www.deigex.com/assets/images/heart-2.png" alt="...">
                                   </a>
                                   <div class="news">
                                       <h5 class="news-h"><a href="our-causes.html#giving-tuesday">
@@ -624,7 +624,7 @@
                               </div>
                               <div class="news-2">
                                   <a href="our-causes.html#food-cloths-program">
-                                      <img src="assets/images/pears.png" alt="...">
+                                      <img src="https://www.deigex.com/assets/images/pears.png" alt="...">
                                   </a>
                                   <div class="news">
                                       <h5 class="news-h"><a href="our-causes.html#food-cloths-program">
@@ -634,7 +634,7 @@
                               </div>
                               <div class="news-3">
                                   <a href="our-causes.html#fair-trade">
-                                      <img src="assets/images/coffee.png" alt="...">
+                                      <img src="https://www.deigex.com/assets/images/coffee.png" alt="...">
                                   </a>
                                   <div class="news">
                                       <h5 class="news-h"><a href="our-causes.html#fair-trade">
