--- a/index.html
+++ b/index.html
@@ -5,23 +5,23 @@
     <title>DEIGEX - Helping the Americas | Homepage</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="assets/css/bootstrap.min.css">
-    <link rel="stylesheet" href="assets/css/manual.css">
-    <link rel="stylesheet" type="text/css" href="assets/css/animate.css">
-    <link rel="stylesheet" href="assets/css/owlcarousel/owl.carousel.min.css">
-    <link rel="stylesheet" href="assets/css/owlcarousel/owl.theme.default.min.css">
-    <link rel="stylesheet" href="assets/css/bootstrap-responsive.min.css">
+    <link rel="stylesheet" href="https://www.deigex.com/assets/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://www.deigex.com/assets/css/manual.css">
+    <link rel="stylesheet" type="text/css" href="https://www.deigex.com/assets/css/animate.css">
+    <link rel="stylesheet" href="https://www.deigex.com/assets/css/owlcarousel/owl.carousel.min.css">
+    <link rel="stylesheet" href="https://www.deigex.com/assets/css/owlcarousel/owl.theme.default.min.css">
+    <link rel="stylesheet" href="https://www.deigex.com/assets/css/bootstrap-responsive.min.css">
     <!-- Google fonts Poppins -->
     <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700" rel="stylesheet">
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <!-- Fontello -->
-    <link rel="stylesheet" href="assets/css/css-fontello/animation.css" type="text/css"/>
-    <link rel="stylesheet" href="assets/css/css-fontello/fontello.css" type="text/css"/>
-    <link rel="stylesheet" href="assets/css/css-fontello/fontello-codes.css" type="text/css"/>
-    <link rel="stylesheet" href="assets/css/css-fontello/fontello-embedded.css" type="text/css"/>
-    <link rel="stylesheet" href="assets/css/css-fontello/fontello-ie7.css" type="text/css"/>
-    <link rel="stylesheet" href="assets/css/css-fontello/fontello-ie7-codes.css" type="text/css"/>
+    <link rel="stylesheet" href="https://www.deigex.com/assets/css/css-fontello/animation.css" type="text/css"/>
+    <link rel="stylesheet" href="https://www.deigex.com/assets/css/css-fontello/fontello.css" type="text/css"/>
+    <link rel="stylesheet" href="https://www.deigex.com/assets/css/css-fontello/fontello-codes.css" type="text/css"/>
+    <link rel="stylesheet" href="https://www.deigex.com/assets/css/css-fontello/fontello-embedded.css" type="text/css"/>
+    <link rel="stylesheet" href="https://www.deigex.com/assets/css/css-fontello/fontello-ie7.css" type="text/css"/>
+    <link rel="stylesheet" href="https://www.deigex.com/assets/css/css-fontello/fontello-ie7-codes.css" type="text/css"/>
 
     <!--[if lt IE 9]>
     <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
@@ -705,14 +705,14 @@
 
 <!-- JS code -->
 <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-<script src="assets/js/jquery.spincrement.js"></script>
-<script src="assets/js/owl.carousel.min.js"></script>
-<script src="assets/js/scrollBar.js"></script>
-<script src="assets/js/bootstrap.min.js"></script>
-<script src="assets/js/myScript.js"></script>
-<script src="assets/js/bootstrap.js"></script>
-<script src="assets/js/jquery.js"></script>
-<script src="assets/js/respond.min.js"></script>
+<script src="https://www.deigex.com/assets/js/jquery.spincrement.js"></script>
+<script src="https://www.deigex.com/assets/js/owl.carousel.min.js"></script>
+<script src="https://www.deigex.com/assets/js/scrollBar.js"></script>
+<script src="https://www.deigex.com/assets/js/bootstrap.min.js"></script>
+<script src="https://www.deigex.com/assets/js/myScript.js"></script>
+<script src="https://www.deigex.com/assets/js/bootstrap.js"></script>
+<script src="https://www.deigex.com/assets/js/jquery.js"></script>
+<script src="https://www.deigex.com/assets/js/respond.min.js"></script>
 
 <script>
     "use strict";
